--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.33.0
-plotly==5.18.0
-yfinance==0.2.36
-pillow==10.3.0
+feedparser>=6.0.8
+yfinance>=0.2.18
+streamlit>=1.22.0
+plotly>=5.13.0
+Pillow>=9.4.0
